Добавил кнопку выводящую логотип

--- a/Project_RRSU/src/.gitignore
+++ b/Project_RRSU/src/.gitignore
@@ -8,3 +8,4 @@
 /RRSU$ButtonEventListener4.class
 /RRSU$ButtonEventListener5.class
 /RRSU$ButtonEventListener6.class
+/RRSU$ButtonEventListener7.class
